--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,7 +136,7 @@ nav a span {
   bottom: 0;
   min-width: 300px;
   max-width: 300px;
-  height: 100%;
+  /* height: 100%; */
   min-height: 100%;
   padding: 20px;
   background: #328AA3;
@@ -309,7 +309,7 @@ nav a span {
   Modal window styles
 */
 
-.hide {
+.hide, .session-hide {
   display: none;
 }
 
