--- a/views/project.pug
+++ b/views/project.pug
@@ -11,25 +11,18 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .project-info-box.box
 
-        //- Use the info in your data file and the comments below to complete this template
-
-        //- Use interpolation to dynamically add the project title
         h1 #{project.project_name}
 
-        //- Use interpolation to dynamically add the project description
         p #{project.description}
 
       .project-tech-links-box.box
         h6 Technologies
         ul
 
-          //- Use an `each` iterator and interpolation to dynamically replace the li tags below with the technologies listed for this project
           - var technologies = `${project.technologies}`;
           each tech, index in project.technologies
             li= tech
 
-
-        //- Add the href values to the links below
         - var liv = `${project.live_link}`;
         - var git = `${project.github_link}`;
         a.btn-link(href=liv, target='_blank') Live Demo
@@ -37,13 +30,13 @@ block content
 
     .project-img-box.box
 
-      //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
       - var image = `${project.image_urls.landscape}`;
       img.project-img(src=image, alt='')
-      //img.project-img(src='https://placehold.it/1200x550', alt='')
-      //img.project-img(src='https://placehold.it/1200x550', alt='')
 
     nav.nav
       a(href='/')
         span &larr;
         |  Back
+    script
+      | var sidebar = document.querySelector('#my-info');
+      | window.onload = () => sidebar.style.height = document.getElementsByTagName('body')[0].scrollHeight + 'px';
